# pep-dna

./: .editorconfig  .gitignore  CITATION.cff  LICENSE  README.md
ccn-lite/: .gitignore
ccn-lite/doc/: README-unix.md
ccn-lite/src/ccnl-relay/: ccn-lite-relay.c
ccn-lite/tutorial/: tutorial.md
configs/: README.md  client-shim-eth-vlan.dif  server-shim-eth-vlan.dif
kernel/: Makefile.in  ctrldev.c  dtcp-ps-default.c  dtp-utils.c  iodev.c  kipcm-utils.h
kernel/ipcps/: shim-eth-vlan-core.c  shim-tcp-udp.c
librina/src/: ctrl.c  logs.cc
pepdna/: Makefile.in  configure  connection.c  core.c  core.h  hash.c  hash.h  rina.c  server.c  server.h  sysctl.c  tcp_connect.c  tcp_utils.h
pepdna/configs/: README.md  default.dif  router-ipcmanager.conf.orig  server-ipcmanager.conf.orig
pepdna/kfa/: kfa.c  kfa.h  mykfa.c  mykfa.h
pepdna/kmodule/: ccn.c  ccn.h  connection.c  connection.h  core.c  core.h  hash.c  hash.h  minip.c  minip.h  netlink.c  netlink.h  rina.c  rina.h  server.c  server.h  sysctl.c  tcp.c  tcp.h  tcp_connect.c  tcp_listen.c  tcp_utils.c  tcp_utils.h
pepdna/kmodule/kfa/: kfa.c
pepdna/utils/: Makefile
pepdna/utils/scripts/: README_scripts.md  apps.sh  config.sh  main.sh  param.sh  run.sh  utils.sh
pepdnapps/: Makefile
pepdnapps/apps/httpapp/: Makefile  httpapp.c  main.c
pepdnapps/apps/tcprdr/: tcprdr.c
pepdnapps/scripts/: config.sh  main.sh  param.sh  run.sh
pepdnapps/scripts/cpumemscripts/: mycpuscr
plugins/cong_avoidance/: .cache.mk
plugins/rdsr-ps/ecn/: .cache.mk
plugins/red/: dtcp-ps-red.c  rmt-ps-red.c
rina-stack/common/: serdes-utils.c
rina-stack/kernel/: cidm.c  dtcp.c  dtcp.h  dtp.c  efcp-str.h  efcp.c  kfa.h  kipcm-utils.c  kipcm.c  kipcm.h  pep.h  pidm.c  rmt.c  sdup-crypto-ps-default.c
rina-stack/rina-tools/: configure.ac
rina-stack/rina-tools/src/flow-allocator/: Makefile.am  common.h  flow-allocator-client.cc  flow-allocator-client.h  flow-allocator-server.cc  flow-allocator-server.h
rina-stack/rina-tools/src/rinahttping/: Makefile.am  rinahttping.c
rina-stack/rinad/: .gitignore
rina-tools/src/rinahttp/: Makefile.am  main.c
rinad/etc/: Makefile.am  ipcmanager.conf.orig.in  ipcmanager_gw.conf.orig.in
(+92 files in other folders)
